# Robot

./: test_d435_camera.urdf.sim.xacro  团队日志.md  无标题文档
kinova_bringup/launch/: kinova_robot.launch
kinova_control/config/: j2s7s300_control.yaml
kinova_control/src/: move_robot.py
kinova_description/meshes/: arm.dae  arm_half_1.dae  arm_half_2.dae  arm_mico.dae  base.dae  forearm.dae  hand_2finger.dae  hand_3finger.dae  shoulder.dae  wrist.dae  wrist_spherical_1.dae  wrist_spherical_2.dae
kinova_description/objects/: objects.urdf.xacro  tools.urdf.xacro
kinova_description/objects/meshes/: left_basket.dae  right_board.dae
kinova_description/objects/meshes/未命名文件夹/: left_basket.dae
kinova_description/objects/objects/: cone.SLDPRT  cone.STL  cone.dae  cuboid.SLDPRT  cuboid.STL  cuboid.dae  cylinder_l.SLDPRT  cylinder_l.dae  cylinder_s.SLDPRT  fo_trustum.SLDPRT  fo_trustum.STL  he.SLDPRT  he_phere.STL  he_prisms.SLDPRT  he_prisms.STL  he_prisms.dae  objects.urdf.xacro  phere.SLDPRT  phere.STL  phere.dae  pyramid.STL  pyramid.dae  tr_prism.SLDPRT  tr_prism.STL  tr_prism.dae  tr_pyramid.SLDPRT  tr_pyramid.STL  tr_pyramid.dae  wrist.SLDPRT
kinova_description/objects/objects/tools-06.01/: first.STL  (+3 more)
kinova_description/objects/tools/: first.SLDPRT  first.STL  first.dae  second.STL  second.dae
kinova_description/urdf/: j2n6s300_standalone.xacro  j2s7s300_standalone.xacro  j2s7s300_standalone_new.xacro  kinova_common.xacro  kinova_sim.xacro  kinova_sim_for2018.xacro
kinova_gazebo/launch/: robot_launch_sim _for2018.launch  robot_launch_sim.launch
kinova_gazebo/worlds/: jaco_sim.world
kinova_moveit/kinova_arm_moveit_demo/: CMakeLists.txt
kinova_moveit/kinova_arm_moveit_demo/src/: KN_real.cpp  KN_sim.cpp  KN_sim_new _save.cpp  KN_sim_new-v1.cpp  KN_sim_new.cpp  KN_sim_new.cpp.expo  KN_sim_new_26.cpp  UR_real.cpp  UR_real_new.cpp  forPID.cpp  kinova_eye_in_hand.cpp  our_pick_place.cpp  test
models/: 无标题文档
models/cone/: cone.dae  model.config  model.sdf  untitled.dae
models/cube/: cube.SLDPRT  cube.STL  cube.dae  model.config  model.sdf  object (2).STL  untitled.dae
models/cuboid/: cuboid.dae  model.config  model.sdf  object (3).STL  untitled.dae
models/cylinder_l/: cylinder_l.STL  cylinder_l.dae  model.config  model.sdf  object (4).STL  untitled.dae
models/cylinder_s/: cylinder_s.STL  cylinder_s.dae  model.config  model.sdf  object (5).STL  untitled.dae
models/fo_trustum/: fo_trustum.dae  model.config  model.sdf  object (6).STL  untitled.dae
models/he_phere/: he_phere.SLDPRT  he_phere.dae  model.config  model.sdf  object (7).STL  untitled.dae
models/he_prisms/: he_prisms.dae  model.config  model.sdf  object (8).STL  untitled.dae
models/left_basket/: model.config  model.sdf  object.STL
models/phere/: model.config  model.sdf  object (9).STL  phere.dae  untitled.dae
models/pyramid/: model.config  model.sdf  object (10).STL  pyramid.SLDPRT  pyramid.dae  untitled.dae
models/right_board/: model.config  model.sdf  untitled.dae
models/tr_prism/: model.config  model.sdf  object (11).STL  tr_prism.dae  untitled.dae
models/tr_pyramid/: model.config  model.sdf  object (12).STL  tr_pyramid.dae  untitled.dae
rviz_teleop_commander/: CMakeLists.txt
table_fix/urdf/: table_kinova.urdf.xacro
(+12 files in other folders)
